WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153580
[GStreamer] MediaPlayerPrivateGStreamerBase::handleSyncMessage leaks GstContext
https://bugs.webkit.org/show_bug.cgi?id=153580
Summary
[GStreamer] MediaPlayerPrivateGStreamerBase::handleSyncMessage leaks GstContext
Gwang Yoon Hwang
Reported
2016-01-27 21:13:29 PST
[GStreamer] MediaPlayerPrivateGStreamerBase::handleSyncMessage leaks GstContext
Attachments
Patch
(2.87 KB, patch)
2016-01-27 21:16 PST
,
Gwang Yoon Hwang
no flags
Details
Formatted Diff
Diff
Patch
(5.31 KB, patch)
2016-01-28 00:14 PST
,
Gwang Yoon Hwang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gwang Yoon Hwang
Comment 1
2016-01-27 21:16:49 PST
Created
attachment 270088
[details]
Patch
Philippe Normand
Comment 2
2016-01-27 23:56:39 PST
Comment on
attachment 270088
[details]
Patch This actually needs GRefPtr template specialization for GstContext.
Gwang Yoon Hwang
Comment 3
2016-01-28 00:14:17 PST
Created
attachment 270098
[details]
Patch
Gwang Yoon Hwang
Comment 4
2016-01-28 00:14:57 PST
(In reply to
comment #2
)
> Comment on
attachment 270088
[details]
> Patch > > This actually needs GRefPtr template specialization for GstContext.
Good point! Fixed to do that
Philippe Normand
Comment 5
2016-01-28 00:16:37 PST
Comment on
attachment 270098
[details]
Patch Thanks :)
WebKit Commit Bot
Comment 6
2016-01-28 01:06:39 PST
Comment on
attachment 270098
[details]
Patch Clearing flags on attachment: 270098 Committed
r195735
: <
http://trac.webkit.org/changeset/195735
>
WebKit Commit Bot
Comment 7
2016-01-28 01:06:42 PST
All reviewed patches have been landed. Closing bug.
Carlos Alberto Lopez Perez
Comment 8
2016-07-06 07:57:14 PDT
(In reply to
comment #6
)
> Comment on
attachment 270098
[details]
> Patch > > Clearing flags on attachment: 270098 > > Committed
r195735
: <
http://trac.webkit.org/changeset/195735
>
Seems this has indirectly raised the build dependency for GSTreamer to > 1.1 version, because gst_context_ref() is not available on 1.0.x
Philippe Normand
Comment 9
2016-07-06 08:26:00 PDT
1.1 ? There is no such version yet.
Philippe Normand
Comment 10
2016-07-06 08:28:10 PDT
Ok so we need an #ifdef around this.
Carlos Alberto Lopez Perez
Comment 11
2016-07-06 08:47:05 PDT
(In reply to
comment #9
)
> 1.1 ? There is no such version yet.
1.1.1 i mean
Carlos Alberto Lopez Perez
Comment 12
2016-07-06 09:01:59 PDT
(In reply to
comment #8
)
> (In reply to
comment #6
) > > Comment on
attachment 270098
[details]
> > Patch > > > > Clearing flags on attachment: 270098 > > > > Committed
r195735
: <
http://trac.webkit.org/changeset/195735
> > > Seems this has indirectly raised the build dependency for GSTreamer to > 1.1 > version, because gst_context_ref() is not available on 1.0.x
To be fair,
r195735
didn't caused this. It seems this was happening since at least
r181499
, because gst_context_new() is also not available on 1.0.x ? (In reply to
comment #10
)
> Ok so we need an #ifdef around this.
Or maybe is better to just raise the gstreamer minimum version on cmake ?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug