[GStreamer] MediaPlayerPrivateGStreamerBase::handleSyncMessage leaks GstContext https://bugs.webkit.org/show_bug.cgi?id=153580

Reviewed by Philippe Normand.

When we creates GstContext using gst_context_new it increases refcount itself.
And the refcount of GstContext is increased when it is passed to
gst_element_set_context, also. Therefore We should unref GstContext after
using it to prevent GstContext leaks.

* platform/graphics/gstreamer/GRefPtrGStreamer.cpp:
(WTF::adoptGRef): Added for GstContext.
(WTF::refGPtr<GstContext>): Ditto
(WTF::derefGPtr<GstContext>): Ditto
* platform/graphics/gstreamer/GRefPtrGStreamer.h:
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::MediaPlayerPrivateGStreamerBase::handleSyncMessage):
Use GRefPtr<GstContext> to handle currect refcounting


Canonical link: https://commits.webkit.org/171661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195735 268f45cc-cd09-0410-ab3c-d52691b4dbfc